{
  "version": 4,
  "terraform_version": "1.14.7",
  "serial": 57,
  "lineage": "963ca168-9936-0a49-67ef-307def3a23fd",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b04c8100c8200714",
            "domain": "vpc",
            "id": "eipalloc-0b04c8100c8200714",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-34-234-40-240.compute-1.amazonaws.com",
            "public_ip": "34.234.40.240",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "dev-nat"
            },
            "tags_all": {
              "Name": "dev-nat"
            },
            "vpc": true
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:657709068282:internet-gateway/igw-091025648ec36dc64",
            "id": "igw-091025648ec36dc64",
            "owner_id": "657709068282",
            "tags": {
              "Name": "dev-igw"
            },
            "tags_all": {
              "Name": "dev-igw"
            },
            "vpc_id": "vpc-08e4f6a13cd639bf3"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b04c8100c8200714",
            "association_id": "eipassoc-0700789567deceec7",
            "connectivity_type": "public",
            "id": "nat-01ab31bbf3f3e2457",
            "network_interface_id": "eni-0a4927ec4c5a08778",
            "private_ip": "10.0.67.3",
            "public_ip": "34.234.40.240",
            "subnet_id": "subnet-089b00195be795b3c",
            "tags": {
              "Name": "dev-nat"
            },
            "tags_all": {
              "Name": "dev-nat"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_subnet.public_us_east_1a",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:657709068282:route-table/rtb-067770edf3c23d5ca",
            "id": "rtb-067770edf3c23d5ca",
            "owner_id": "657709068282",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-01ab31bbf3f3e2457",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "dev-private"
            },
            "tags_all": {
              "Name": "dev-private"
            },
            "timeouts": null,
            "vpc_id": "vpc-08e4f6a13cd639bf3"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_subnet.public_us_east_1a",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:657709068282:route-table/rtb-0a5d384467d8c0187",
            "id": "rtb-0a5d384467d8c0187",
            "owner_id": "657709068282",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-091025648ec36dc64",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "dev-public"
            },
            "tags_all": {
              "Name": "dev-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-08e4f6a13cd639bf3"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_us_east_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-023eab9fe3b0e4366",
            "route_table_id": "rtb-067770edf3c23d5ca",
            "subnet_id": "subnet-0201b3f34821126ca"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.private_us_east_1a",
            "aws_subnet.public_us_east_1a",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_us_east_1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0aea38c165476d8ba",
            "route_table_id": "rtb-067770edf3c23d5ca",
            "subnet_id": "subnet-0c927affb3b96d0f5"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.private_us_east_1b",
            "aws_subnet.public_us_east_1a",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_us_east_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0712a4ea8a5b1983c",
            "route_table_id": "rtb-0a5d384467d8c0187",
            "subnet_id": "subnet-089b00195be795b3c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public_us_east_1a",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_us_east_1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fa8eeb03a3ff199e",
            "route_table_id": "rtb-0a5d384467d8c0187",
            "subnet_id": "subnet-09c7b44708413976f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public_us_east_1b",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_us_east_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:657709068282:subnet/subnet-0201b3f34821126ca",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.0.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0201b3f34821126ca",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "657709068282",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-private-us-east-1a",
              "kubernetes.io/cluster/dev": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "dev-private-us-east-1a",
              "kubernetes.io/cluster/dev": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-08e4f6a13cd639bf3"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_us_east_1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:657709068282:subnet/subnet-0c927affb3b96d0f5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.32.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c927affb3b96d0f5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "657709068282",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-private-us-east-1b",
              "kubernetes.io/cluster/dev": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "dev-private-us-east-1b",
              "kubernetes.io/cluster/dev": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-08e4f6a13cd639bf3"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_us_east_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:657709068282:subnet/subnet-089b00195be795b3c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.64.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-089b00195be795b3c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "657709068282",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-public-us-east-1a",
              "kubernetes.io/cluster/dev": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "dev-public-us-east-1a",
              "kubernetes.io/cluster/dev": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-08e4f6a13cd639bf3"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_us_east_1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:657709068282:subnet/subnet-09c7b44708413976f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.96.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09c7b44708413976f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "657709068282",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-public-us-east-1b",
              "kubernetes.io/cluster/dev": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "dev-public-us-east-1b",
              "kubernetes.io/cluster/dev": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-08e4f6a13cd639bf3"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:657709068282:vpc/vpc-08e4f6a13cd639bf3",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-02a2c78bc1b1a4c08",
            "default_route_table_id": "rtb-00da5e32fcadf935b",
            "default_security_group_id": "sg-07434eb51837a98f0",
            "dhcp_options_id": "dopt-0d249e2c9be67e424",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-08e4f6a13cd639bf3",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-00da5e32fcadf935b",
            "owner_id": "657709068282",
            "tags": {
              "Name": "dev-main"
            },
            "tags_all": {
              "Name": "dev-main"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}